--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        <nav class="header-navigation">
         <a class="header-logo" href="./index.html">Web<span class="header-logo-black">Studio</span></a>
         <ul class="header-menu-list">
-            <li class="header-menu-item"><a class="header-menu-link header-menu-link-active" href="">Studio</a></li>
+            <li class="header-menu-item"><a class="header-menu-link header-menu-link-active" href="./index.html">Studio</a></li>
             <li class="header-menu-item"><a class="header-menu-link" href="">Portfolio</a></li>
             <li class="header-menu-item"><a class="header-menu-link" href="">Contacts</a></li>
         </ul>
